dark mode fixed logo image

--- a/script/css/layout.css
+++ b/script/css/layout.css
@@ -1512,6 +1512,30 @@ body #wrapper #topbtn:hover {
   --gray: #ffffff;
   --blue: #295768;
 }
+.dark #loading > object {
+  filter: invert(1);
+  -moz-filter: invert(1);
+  -webkit-filter: invert(7 1);
+  -o-filter: invert(1);
+}
+.dark .header .logo {
+  filter: invert(1);
+  -moz-filter: invert(1);
+  -webkit-filter: invert(7 1);
+  -o-filter: invert(1);
+}
+.dark #wrapper .banner .banner_inner .youshiiDesignLoop > img {
+  filter: invert(1);
+  -moz-filter: invert(1);
+  -webkit-filter: invert(7 1);
+  -o-filter: invert(1);
+}
+.dark #wrapper .colophon .colophon_inner .colophon_inner_top .colophon_inner_top_left .colophon_inner_top_left_header > img {
+  filter: invert(1);
+  -moz-filter: invert(1);
+  -webkit-filter: invert(7 1);
+  -o-filter: invert(1);
+}
 /* dark mode end*/
 @keyframes slide {
   25% {
