--- a/script/less/mediaQuery.less
+++ b/script/less/mediaQuery.less
@@ -699,5 +699,44 @@
         --gray: #ffffff;
         --blue: #295768; 
     }  
+
+    body{        
+        #loading{
+            & > object{
+                .filter-invert(1);
+            }
+        }
+
+        .header{
+            .logo{
+                .filter-invert(1);
+            }
+        }
+
+        #wrapper{ 
+            .banner{
+                .banner_inner {
+                    .youshiiDesignLoop{ 
+                        & > img{
+                            .filter-invert(1);
+                        }
+                    }
+                }
+            }
+            .colophon{ 
+                .colophon_inner{
+                    .colophon_inner_top{
+                        .colophon_inner_top_left{
+                            .colophon_inner_top_left_header{ 
+                                & > img{
+                                    .filter-invert(1);
+                                }
+                            }
+                        }
+                    }
+                }
+            }   
+        } 
+    }
 }
 /* auto dark mode */
